nys-109: use vertical admin bar and reenable dynamic header for admins; update css to ensure mobile admin bar doesn't overlap header

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -1163,3 +1163,14 @@ a:hover.c-header--btn.c-header--btn__taking_action {
     position: relative;
   }
 }
+
+// Ensure header doesn't fall behind admin toolbar
+.toolbar-vertical {
+  #js-sticky--clone {
+    top: 39px
+  }
+
+  &.nav-open .c-nav--wrap {
+    top: 99px;
+  }
+}
